--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="hero">
       <header>
         <div class="logo">
-          <h2>Digitals</h2>
+          <h2>Digital</h2>
         </div>
         <div class="nav-links">
           <ul class="nav">
@@ -95,5 +95,42 @@
         </div>
       </div>
     </section>
+    <section class="photo">
+      <div class="container-image">
+        <div class="image_1">
+          <img
+            src="https://dr.savee-cdn.com/things/5/d/ca79fcc8aa7b268f8becd8.webp"
+          />
+        </div>
+        <div class="Text_1">
+          <h3>Maybe Next Time...</h3>
+        </div>
+      </div>
+    </section>
+    <section class="scroll">
+      <div class="Title">
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+      </div>
+    </section>
   </body>
 </html>
+
