--- a/index.html
+++ b/index.html
@@ -96,6 +96,42 @@
         </div>
       </div>
     </section>
+    <section class="photo">
+      <div class="container-image">
+        <div class="image_1">
+          <img
+            src="https://dr.savee-cdn.com/things/6/4/4c253d5ea98f623cb15c0e.webp"
+          />
+        </div>
+        <div class="Text_1">
+          <h3>Maybe Next Time...</h3>
+        </div>
+      </div>
+    </section>
+    <section class="scroll">
+      <div class="Title">
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+        <h3>Time Up!</h3>
+      </div>
+    </section>
     <script>
       gsap.from(".logo ", 1.4, {
         opacity: 0,
