--- a/index.html
+++ b/index.html
@@ -104,7 +104,13 @@
           />
         </div>
         <div class="Text_1">
-          <h3>Maybe Next Time...</h3>
+          <h3>
+            Last Year <br />
+            <br />
+            You Said <br />
+            <br />
+            Next Year
+          </h3>
         </div>
       </div>
     </section>
@@ -133,7 +139,7 @@
       </div>
     </section>
     <script>
-      gsap.from(".logo ", 1.4, {
+      gsap.from(".logo ", 1.2, {
         opacity: 0,
         x: 40,
         ease: "power3.inOut",
