--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="hero">
       <header>
         <div class="logo">
-          <h2>Digitals</h2>
+          <img src="1210520.png" alt="" />
         </div>
         <div class="nav-links">
           <ul class="nav">
