--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- /------GSAP---------/ -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -21,149 +23,198 @@
     <title>A New BEGINING</title>
   </head>
   <body>
-    <section class="hero">
-      <header>
-        <div class="logo">
-          <img src="1210520.png" alt="" />
+    <div class="data-scroll-container">
+      <section class="hero">
+        <header>
+          <div class="logo">
+            <img src="1210520.png" alt="" />
+          </div>
+          <div class="nav-links">
+            <ul class="nav">
+              <li><a href="#">WORK </a></li>
+              <li><a href="#">ABOUT </a></li>
+              <li><a href="#">CONTACT </a></li>
+            </ul>
+          </div>
+        </header>
+        <div class="hero-container">
+          <div class="hero-text">
+            <h1>A DIGITAL DESIGN STUDIO DRIVEN BY RESEARCH & STRATEGY</h1>
+            <p>DESIGNED TO ENGAGE BUILT TO CONNECT</p>
+          </div>
         </div>
-        <div class="nav-links">
-          <ul class="nav">
-            <li><a href="#">WORK </a></li>
-            <li><a href="#">ABOUT </a></li>
-            <li><a href="#">CONTACT </a></li>
-          </ul>
+      </section>
+      <section class="grid">
+        <div class="image-wrapper">
+          <div class="image-1">
+            <p>200-2-0</p>
+            <img
+              src="https://images.unsplash.com/photo-1682371456268-05501fc6d6d3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=733&q=80"
+            />
+          </div>
+          <div class="image-2">
+            <p>200-2-0</p>
+            <img
+              src="https://images.unsplash.com/photo-1682331593228-c85897772502?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+            />
+          </div>
+          <div class="image-3">
+            <p>Green</p>
+            <img
+              src="https://images.unsplash.com/photo-1682331591755-4c9e2ab8b5a5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDh8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+            />
+          </div>
+          <div class="image-4">
+            <p>Sunflower</p>
+            <img
+              src="https://images.unsplash.com/photo-1682331592258-beeaf21c6681?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+            />
+          </div>
         </div>
-      </header>
-      <div class="hero-container">
-        <div class="hero-text">
-          <h1>A DIGITAL DESIGN STUDIO DRIVEN BY RESEARCH & STRATEGY</h1>
-          <p>DESIGNED TO ENGAGE BUILT TO CONNECT</p>
+      </section>
+      <section class="about">
+        <div class="main">
+          <div class="box1">
+            <ul class="text1">
+              <li>Strategy</li>
+              <li>Identitiest Brand</li>
+              <li>UI/UX Design</li>
+              <li>Back &amp; Front End</li>
+              <li>Admin system AR /VR</li>
+            </ul>
+          </div>
+          <div class="box2">
+            <p>
+              We are Rezo Zero, a digital creative agency that designs and
+              develops unique brand identities and tailor-made digital
+              solutions. We help our clients from the definition of their
+              strategy to the realization of their digital ecosystem. At the
+              heart of our approach is the constant search for the juncture
+              between aesthetic beauty and technical performance. We envision
+              each of our projects as a singular piece at the service of our
+              clients' communication goals. We want them to be resolutely turned
+              towards agility and simplicity to face the complex challenges of
+              the modern world.
+            </p>
+            <button>Click Me!</button>
+          </div>
         </div>
-      </div>
-    </section>
-    <section class="grid">
-      <div class="image-wrapper">
-        <div class="image-1">
-          <p>200-2-0</p>
-          <img
-            src="https://images.unsplash.com/photo-1682371456268-05501fc6d6d3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=733&q=80"
-          />
+      </section>
+      <section class="photo">
+        <div class="container-image">
+          <div class="image_1">
+            <img
+              src="https://dr.savee-cdn.com/things/6/4/4c253d5ea98f623cb15c0e.webp"
+            />
+          </div>
+          <div class="Text_1">
+            <h3>
+              Last Year <br />
+              <br />
+              You Said <br />
+              <br />
+              Next Year
+            </h3>
+          </div>
         </div>
-        <div class="image-2">
-          <p>200-2-0</p>
-          <img
-            src="https://images.unsplash.com/photo-1682331593228-c85897772502?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-          />
+      </section>
+      <section class="scroll">
+        <div class="Title">
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
+          <h3>Time Up!</h3>
         </div>
-        <div class="image-3">
-          <p>Green</p>
-          <img
-            src="https://images.unsplash.com/photo-1682331591755-4c9e2ab8b5a5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDh8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
-          />
-        </div>
-        <div class="image-4">
-          <p>Sunflower</p>
-          <img
-            src="https://images.unsplash.com/photo-1682331592258-beeaf21c6681?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-          />
-        </div>
-      </div>
-    </section>
-    <section class="about">
-      <div class="main">
-        <div class="box1">
-          <ul class="text1">
-            <li>Strategy</li>
-            <li>Identitiest Brand</li>
-            <li>UI/UX Design</li>
-            <li>Back &amp; Front End</li>
-            <li>Admin system AR /VR</li>
-          </ul>
-        </div>
-        <div class="box2">
-          <p>
-            We are Rezo Zero, a digital creative agency that designs and
-            develops unique brand identities and tailor-made digital solutions.
-            We help our clients from the definition of their strategy to the
-            realization of their digital ecosystem. At the heart of our approach
-            is the constant search for the juncture between aesthetic beauty and
-            technical performance. We envision each of our projects as a
-            singular piece at the service of our clients' communication goals.
-            We want them to be resolutely turned towards agility and simplicity
-            to face the complex challenges of the modern world.
-          </p>
-          <button>Click Me!</button>
-        </div>
-      </div>
-    </section>
-    <section class="photo">
-      <div class="container-image">
-        <div class="image_1">
-          <img
-            src="https://dr.savee-cdn.com/things/6/4/4c253d5ea98f623cb15c0e.webp"
-          />
-        </div>
-        <div class="Text_1">
-          <h3>
-            Last Year <br />
-            <br />
-            You Said <br />
-            <br />
-            Next Year
-          </h3>
-        </div>
-      </div>
-    </section>
-    <section class="scroll">
-      <div class="Title">
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-        <h3>Time Up!</h3>
-      </div>
-    </section>
-    <script>
-      gsap.from(".logo ", 1.2, {
-        opacity: 0,
-        x: 40,
-        ease: "power3.inOut",
-        stagger: 0.2,
-      });
+      </section>
+      <script>
+        gsap.from(".logo ", 1.2, {
+          opacity: 0,
+          x: 40,
+          ease: "power3.inOut",
+          stagger: 0.2,
+        });
 
-      gsap.from(".nav-links li", 1.4, {
-        opacity: 0,
-        x: 40,
-        ease: "power3.inOut",
-        stagger: 0.2,
-      });
-      gsap.from(".hero-container h1 ", 1.4, {
-        opacity: 0,
-        x: -100,
-        ease: "power3.inOut",
-        stagger: 0.2,
-      });
-      gsap.from(".hero-container p ", 1.4, {
-        opacity: 0,
-        x: -200,
-        delay: 0.18,
-        ease: "power2.inOut",
-      });
+        gsap.from(".nav-links li", 1.4, {
+          opacity: 0,
+          x: 40,
+          ease: "power3.inOut",
+          stagger: 0.2,
+        });
+        gsap.from(".hero-container h1 ", 1.4, {
+          delay:0.5,
+          opacity: 0,
+          x: -100,
+          ease: "power3.inOut",
+          stagger: 0.2,
+        });
+        gsap.from(".hero-container p ", 1.4, {
+          opacity: 0,
+          x: -200,
+          delay: 0.7,
+          ease: "power2.inOut",
+        });
+        gsap.from(".box1", 1.3, {
+          opacity: 0.15,
+          x: -200,
+          ease: "power1.inOut",
+          scrollTrigger:{
+            trigger:".box1",
+            scrub:1,
+            start:"top bottom",
+            end: "bottom center",
+          }
+        });
+        gsap.from(".box2", 1.3, {
+          opacity: 0.15,
+          x: 200,
+          ease: "power1.inOut",
+          scrollTrigger:{
+           scrub: 1,
+            trigger:".box2",
+             start:"top bottom",
+            end: "bottom center",
+          }
+        });
+        gsap.from(".image_1", 1, {
+          opacity: 1,
+          y: 200,
+          ease: "power2.inOut",
+          scrollTrigger:{
+           scrub:  1.5,
+            trigger:".image_1",
+            end: "bottom center",
+            markers:true,
+          }
+        });
+        gsap.from(".Text_1", 1, {
+          opacity: 0.90,
+          y: 200,
+          ease: "power2.inOut",
+          scrollTrigger:{
+           scrub:  1.5,
+            trigger:".Text_1",
+            end: "bottom center",
+          }
+        });
+        
+      </script>
+    </div>
     </script>
   </body>
 </html>
