--- a/index.html
+++ b/index.html
@@ -172,23 +172,23 @@
         gsap.from(".box1", 1.3, {
           opacity: 0.15,
           x: -200,
-          ease: "power1.inOut",
+          ease: "circ",
           scrollTrigger:{
             trigger:".box1",
             scrub:1,
             start:"top bottom",
-            end: "bottom center",
+            end: "center center",
           }
         });
         gsap.from(".box2", 1.3, {
           opacity: 0.15,
           x: 200,
-          ease: "power1.inOut",
+          ease: "circ",
           scrollTrigger:{
-           scrub: 1,
-            trigger:".box2",
-             start:"top bottom",
-            end: "bottom center",
+          scrub: 1,
+          trigger:".box2",
+          start:"top bottom",
+          end: "center center",
           }
         });
         gsap.from(".image_1", 1, {
@@ -199,7 +199,6 @@
            scrub:  1.5,
             trigger:".image_1",
             end: "bottom center",
-            markers:true,
           }
         });
         gsap.from(".Text_1", 1, {
