--- a/index.html
+++ b/index.html
@@ -142,78 +142,7 @@
           <h3>Time Up!</h3>
         </div>
       </section>
-      <script>
-        gsap.from(".logo ", 1.2, {
-          opacity: 0,
-          x: 40,
-          ease: "power3.inOut",
-          stagger: 0.2,
-        });
-
-        gsap.from(".nav-links li", 1.4, {
-          opacity: 0,
-          x: 40,
-          ease: "power3.inOut",
-          stagger: 0.2,
-        });
-        gsap.from(".hero-container h1 ", 1.4, {
-          delay:0.5,
-          opacity: 0,
-          x: -100,
-          ease: "power3.inOut",
-          stagger: 0.2,
-        });
-        gsap.from(".hero-container p ", 1.4, {
-          opacity: 0,
-          x: -200,
-          delay: 0.7,
-          ease: "power2.inOut",
-        });
-        gsap.from(".box1", 1.3, {
-          opacity: 0.15,
-          x: -200,
-          ease: "circ",
-          scrollTrigger:{
-            trigger:".box1",
-            scrub:1,
-            start:"top bottom",
-            end: "center center",
-          }
-        });
-        gsap.from(".box2", 1.3, {
-          opacity: 0.15,
-          x: 200,
-          ease: "circ",
-          scrollTrigger:{
-          scrub: 1,
-          trigger:".box2",
-          start:"top bottom",
-          end: "center center",
-          }
-        });
-        gsap.from(".image_1", 1, {
-          opacity: 1,
-          y: 200,
-          ease: "power2.inOut",
-          scrollTrigger:{
-           scrub:  1.5,
-            trigger:".image_1",
-            end: "bottom center",
-          }
-        });
-        gsap.from(".Text_1", 1, {
-          opacity: 0.90,
-          y: 200,
-          ease: "power2.inOut",
-          scrollTrigger:{
-           scrub:  1.5,
-            trigger:".Text_1",
-            end: "bottom center",
-          }
-        });
-        
-      </script>
     </div>
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
