font/animation -changes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <!-- /--FONTS--/ -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -109,11 +116,11 @@
           </div>
           <div class="Text_1">
             <h3>
-              Last Year <br />
+              BEST IN <br />
               <br />
-              You Said <br />
+              CLASS PRODUCTS <br />
               <br />
-              Next Year
+              FOR THE Year
             </h3>
           </div>
         </div>
