--- a/index.html
+++ b/index.html
@@ -127,28 +127,43 @@
       </section>
       <section class="scroll">
         <div class="Title">
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
-          <h3>Time Up!</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
+          <h3>Connect</h3>
         </div>
       </section>
+      <section>
+        <div class="footer-wrapper">
+          <div class="left-side">
+            <h3>Get In Touch</h3>
+          </div>
+          <div class="right-side">
+            <h5>Social Networks</h5>
+            <h4>Twitter</h4>
+            <h4>Instagram</h4>
+          </div>
+        </div>
+      </section>
+      <div class="copy">
+        <h4>Website By Niranjan</h4>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
