--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="image-1">
             <p>200-2-0</p>
             <img
-              src="https://images.unsplash.com/photo-1682371456268-05501fc6d6d3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=733&q=80"
+              src="https://dr.savee-cdn.com/things/thumbnails/6/3/d121b205467b2659d75043.webp"
             />
           </div>
           <div class="image-2">
