--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               <br />
               CLASS PRODUCTS <br />
               <br />
-              FOR THE Year
+              OF THE Year
             </h3>
           </div>
         </div>
