--- a/index.html
+++ b/index.html
@@ -125,6 +125,19 @@
           </div>
         </div>
       </section>
+      <section class="black">
+          <div class="image-wrapper1">
+            <img
+              src="https://dr.savee-cdn.com/things/6/4/403b59b78da6c42fea97f8.webp"
+            />
+          </div>
+          <div class="text-wrapper1">
+            <h3>TIME FLIES.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium iste maiores esse impedit, nobis nihil sequi. Officia, dignissimos? Omnis, magni? Labore explicabo sed quidem culpa quo porro laboriosam iure hic.</p>
+            <button>Know More!</button>
+          </div>
+        </div>
+      </section>
       <section class="scroll">
         <div class="Title">
           <h3>Connect</h3>
